--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: minima
-gems:
+plugins:
   - jekyll-feed
   - jekyll-paginate
 exclude:
